fix(examples): remove horizontal scroll on small phone screens
 - and some other visual jank associated with layout changes

--- a/examples/app.scss
+++ b/examples/app.scss
@@ -38,6 +38,7 @@ demos-app {
       }
       @media screen and (max-width: $layout-breakpoint-sm) {
         width: $app-content-sm;
+        margin: 0;
       }
 
       a.previous, a.next {
@@ -56,7 +57,11 @@ demos-app {
           white-space: nowrap;
         }
         i {
+          height:47px;
+          height: 47px;
           padding-top: 24px;
+          margin: 0 10px;
+          vertical-align:bottom;
         }
       }
       .previous {
@@ -118,14 +123,13 @@ demos-app {
       @include md-tall-toolbar();
       h1 {
         font-size: $title-font-size-base;
-        width: $app-content-sm;
+        width: $app-content-sm - 80px;
         margin-left: 0;
       }
     }
   }
 
   md-content {
-    max-width: 800px;
     > section {
       > h1 {
         margin-top: rem(6);
